[tool.poetry]
name = "billeba"
version = "0.1.0"
description = ""
authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
readme = "README.md"
package-mode = false

[qapio]
concurrency = 1


[tool.poetry.dependencies]
python = "^3.12"
qapi-python = {git = "git@github.com:qapio/qapi-python.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
